--- a/package.json
+++ b/package.json
@@ -1,28 +1,19 @@
 {
-  "name": "solana-trading-monitor",
+  "name": "volume-bot",
   "version": "1.0.0",
-  "description": "Monitor Solana trading activity via Raydium and PumpPortal",
-  "main": "index.js",
+  "description": "Volume bot with Jupiter integration for Solana token swaps",
+  "main": "src/volume_bot.js",
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "start": "node src/index.js"
+    "start": "node src/volume_bot.js",
+    "test": "node src/test_volume_bot.js"
   },
   "dependencies": {
-    "@raydium-io/raydium-sdk": "^1.3.1-beta.0",
-    "@raydium-io/raydium-sdk-v2": "^0.1.92-alpha",
-    "@solana/spl-token": "^0.4.9",
     "@solana/web3.js": "^1.87.6",
-    "http-proxy": "^1.18.1",
-    "https-proxy-agent": "^7.0.5",
-    "proxy-chain": "^2.5.5",
+    "@project-serum/anchor": "^0.26.0",
+    "cross-fetch": "^4.0.0",
+    "bs58": "^5.0.0",
+    "ws": "^8.16.0",
     "winston": "^3.11.0",
-    "ws": "^8.16.0"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.11",
-    "@types/ws": "^8.5.10",
-    "jest": "^29.7.0"
+    "dotenv": "^16.3.1"
   }
 }
