--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@jup-ag/api": "^6.0.30",
     "@project-serum/anchor": "^0.26.0",
     "@solana/web3.js": "^1.95.5",
+    "axios": "^1.7.8",
     "bs58": "^5.0.0",
     "cross-fetch": "^4.0.0",
     "dotenv": "^16.4.5",
