--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jito-js-rpc": "^0.1.0",
     "node-fetch": "^3.3.2",
     "winston": "^3.17.0",
-    "ws": "^8.16.0"
+    "ws": "^8.16.0",
+    "prompts": "^2.4.2"
   }
 }
